--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 * {
   box-sizing: border-box;
   scrollbar-width: none;
+  max-width: 100vw;
+}
+
+html {
+  overflow-x: hidden;
+  width: 100%;
 }
 
 body {
@@ -11,9 +17,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
+  width: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+[data-aos] {
+  will-change: transform;
+  overflow: hidden;
 }
